--- a/backend/app/templates/users.html
+++ b/backend/app/templates/users.html
@@ -550,7 +550,7 @@
                             <table class="table table-hover" id="usersTable">
                                 <thead>
                                     <tr>
-d<th>Username</th>
+                                        <th>Username</th>
                                         <th>Email</th>
                                         <th>Role</th>
                                         <th>Status</th>
